# editorbinder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  QUICKSTART.md  README.md  SECURITY.md  SUPPORT_POLICY.md  build_pyinstaller_onedir.bat  build_source_zip.bat  enable_portable_mode.bat  install_shortcuts.bat  install_windows_shortcuts.bat  pyproject.toml  requirements.txt  reset_window.bat  run_app.bat  run_app.pyw
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: tools.json
docs/: ai_workflow.md  deployment.md  downloads.md  preset_test_matrix.md  tool_packs.md  unreal_api_notes.md  walkthrough.md
docs/examples/: import_json_tool.json  import_marker_tool.txt  import_pack.json  import_python_tool.py
src/editorbinder/: __init__.py  __main__.py  app.py
src/unreal_utility_tool/: __init__.py  ai_parser.py  ai_provider.py  app.py  compatibility_templates.py  exporter.py  models.py  params.py  presets.py  prompts.py  release_catalog.py  settings.py  storage.py  theme.py  tk_app.py  tool_importer.py  tool_linter.py  validation.py
tests/: test_ai_parser.py  test_ai_provider.py  test_packaging.py  test_params.py  test_presets.py  test_prompts.py  test_public_hygiene.py  test_settings.py  test_storage.py  test_tool_importer.py  test_tool_linter.py  test_ui_smoke.py  test_validation.py  test_windowing.py
tools/: blender_export_dcc_layout_csv.py  package_source_release.py  package_windows_release.py  verify_release_artifacts.py
(+10 files in other folders)
