[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editorbinder"
version = "0.1.0"
description = "Desktop clipboard library for Unreal Engine Python Console tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Bartosz Rozmus" },
]
keywords = ["unreal-engine", "python", "editor-tools", "desktop", "clipboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
editorbinder = "editorbinder.app:main"

[tool.setuptools.packages.find]
where = ["src"]
